new literature.  updated brookshear entry.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@172 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/introduction/studyguide.tex
+++ b/introduction/studyguide.tex
@@ -6,13 +6,16 @@
 \usepackage{prettyref,varioref}
 \usepackage[swedish]{babel}
 \usepackage{hyperref,url}
+\usepackage[today,fancy]{svninfo}
 \usepackage[natbib,prettyref,varioref]{miunmisc}
+
+\svnInfo $Id$
 
 \title{Studiehandledning för\\DT001G Informationsteknologi grundkurs}
 \author{Daniel Bosk\footnote{%
 	E-post: \href{mailto:daniel.bosk@miun.se}{daniel.bosk@miun.se}.
 }}
-\date{\today}
+\date{\svnId}
 
 \begin{document}
 \maketitle
