--- a/introduction/welcome.tex
+++ b/introduction/welcome.tex
@@ -2,6 +2,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
 \usepackage{pdfpages}
+\usepackage[today,nofancy]{svninfo}
+
+\svnInfo $Id$
 
 % the following settings can be put into ~/texmf/miunlett.conf
 % and thus save yourself from rewriting them for all your letters.
