--- a/itgrund.bib
+++ b/itgrund.bib
@@ -28,17 +28,6 @@
 	keywords={Datavetenskap}, 
 }
 @book{
-	Brookshear2012csa,
-	author={Brookshear, J. Glenn and Smith, David T. and Brylow, Dennis}, 
-	title={Computer science : an overview}, 
-	publisher={Pearson Addison-Wesley}, 
-	address={Boston}, 
-	year={2012}, 
-	edition={11th ed.}, 
-	ISBN={978-0-13-256903-3 (pbk. : alk. paper)}, 
-	keywords={Datavetenskap}, 
-}
-@book{
 	Capron1996ctf,
 	author={Capron, H. L. and Johnson, J. A.}, 
 	title={Computers : tools for an information age}, 
@@ -54,7 +43,7 @@
 	title={{OWASP Top 10 -- 2010} : The Ten Most Critical Web Application
 		Security Risks},
 	year={2010},
-	month={April},
+	month={apr},
 	URL={https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project},
 }
 @article{
@@ -87,7 +76,7 @@
 	author={Hunt, Troy},
 	title={A brief {Sony} password analysis},
 	year={2011},
-	month={June},
+	month={jun},
 	URL={http://www.troyhunt.com/2011/06/brief-sony-password-analysis.html},
 }
 @manual{
@@ -96,7 +85,7 @@
 	author={Cotton, M. and Vegoda, L.},
 	organization={{ICANN}},
 	publisher={{Internet Engineering Taskforce (IETF)}},
-	month={January},
+	month={jan},
 	year={2010},
 	URL={https://tools.ietf.org/html/rfc5735},
 }
@@ -106,7 +95,7 @@
 	author={{Information Sciences Institute}},
 	organization={University of Southern California},
 	publisher={{Internet Engineering Taskforce (IETF)}},
-	month={September},
+	month={sep},
 	year={1981},
 	URL={https://tools.ietf.org/html/rfc791},
 }
@@ -116,14 +105,14 @@
 	author={Deering, S. and Hinden, R.},
 	organization={Cisco and Nokia},
 	publisher={{Internet Engineering Taskforce (IETF)}},
-	month={December},
+	month={dec},
 	year={1998},
 	URL={https://tools.ietf.org/html/rfc2460},
 }
 @misc{
 	Convergence,
 	title={Convergence},
-	month={October},
+	month={oct},
 	year={2011},
 	URL={http://convergence.io},
 }
@@ -147,4 +136,77 @@
 	title={{\LaTeX} Usage Instructions},
 	year={2012},
 	URL={http://ver.miun.se/dokument/instruktioner/latex/windows.pdf},
+}
+@misc{
+	TUG2011jwi,
+	author={{\TeX\ Users Group}},
+	title={Just what is {\TeX}?},
+	year={2011},
+	URL={http://www.tug.org/whatis.html},
+}
+@misc{
+	MiUn2012rft,
+	author={Mittuniversitetet},
+	title={Raportmall för tekniska rapporter},
+	year={2012},
+	note={Finns tillgänglig i lärplattformen}
+}
+@misc{
+	Wikibooks2012l,
+	author={Wikibooks},
+	title={{\LaTeX}},
+	year={2012},
+	URL={https://en.wikibooks.org/wiki/LaTeX/},
+}
+@misc{
+	Honan2012haa,
+	author={Honan, Mat},
+	title={How {Apple} and {Amazon} Security Flaws Led to My Epic Hacking},
+	year={2012},
+	month={aug},
+	URL={http://www.wired.com/threatlevel/2012/08/mat-hacked/},
+}
+@misc{
+	Zetter2012hnt,
+	author={Zetter, Kim},
+	title={How Not to Become {Mat Honan}: A Short Primer on Online Security},
+	year={2012},
+	month={aug},
+	URL={http://www.wired.com/threatlevel/2012/08/how-not-to-become-mat-honan/},
+}
+@misc{
+	Brading2012tlw,
+	author={Brading, Anna},
+	title={Twitter + location = WeKnowYourHouse},
+	year={2012},
+	month={aug},
+	URL={http://nakedsecurity.sophos.com/2012/08/15/twitter-location-weknowyourhouse/},
+}
+@misc{
+	Cherry2012fky,
+	author={Cherry, Steven},
+	title={Facebook Knows Your Friends -- Even if They're Not on {Facebook}},
+	year={2012},
+	month={may},
+	URL={http://spectrum.ieee.org/podcast/computing/networks/facebook-knows-your-friendseven-if-theyre-not-on-facebook/},
+}
+@misc{
+	Cluley2012twp,
+	author={Cluley, Graham},
+	title={The worst passwords you could ever choose exposed by {Yahoo Voices}
+		hack},
+	year={2012},
+	month={jul},
+	URL={http://nakedsecurity.sophos.com/2012/07/13/yahoo-voices-poor-passwords/},
+}
+@book{
+	Brookshear2012csa,
+	author={Brookshear, J.Glenn.},
+	title={Computer science : an overview},
+	publisher={Pearson Addison-Wesley},
+	address={Boston},
+	year={2012},
+	edition={International ed. of 11th revised ed.},
+	ISBN={978-0-273-75139-7},
+	keywords={Datavetenskap},
 }
