--- a/lectures/lect-internet/lect-internet.tex
+++ b/lectures/lect-internet/lect-internet.tex
@@ -28,6 +28,8 @@
 \bibliographystyle{sweplnat}
 \setcitestyle{numbers}
 \usepackage[amssymb,noams,binary]{SIunits}
+\usepackage[today,nofancy]{svninfo}
+\svnInfo $Id$
 \def\newblock{\hskip .11em plus .33em minus .07em}
 
 \newcommand{\bps}{\bit\per\second}
@@ -53,8 +55,7 @@
 	Mittuniversitetet, Sundsvall.
 }
 
-\date[3/10 2011] % (optional)
-{3 oktober 2011}
+\date{\svnId}
 
 \pgfdeclareimage[height=0.65cm]{university-logo}{../../../MU_logotyp_int_CMYK.pdf}
 \logo{\pgfuseimage{university-logo}}
