restructuring and using new build system miun.course.mk
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@215 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/assgn-computer/assgn-computer.tex
+++ b/assignments/assgn-computer/assgn-computer.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
 \usepackage{prettyref,varioref}
@@ -41,7 +42,7 @@
 \section{Läsanvisningar}
 \label{sec:Lasanvisningar}
 \noindent
-\dots
+\input{literature.tex}
 
 
 \section{Genomförande}
