--- a/introduction/literature.tex
+++ b/introduction/literature.tex
@@ -5,7 +5,8 @@
 \usepackage[swedish]{babel}
 \usepackage{url,hyperref}
 \usepackage[today,nofancy]{svninfo}
-\usepackage[natbib,prettyref,varioref]{miunmisc}
+\usepackage{listings}
+\usepackage[natbib,prettyref,varioref,listings]{miunmisc}
 
 \svnInfo $Id$
 
