--- a/assignments/computer/computer.tex
+++ b/assignments/computer/computer.tex
@@ -1,6 +1,5 @@
 \documentclass[11pt,a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
 \usepackage{prettyref,varioref}
@@ -42,7 +41,7 @@
 \section{Läsanvisningar}
 \label{sec:Lasanvisningar}
 \noindent
-\input{literature.tex}
+\dots
 
 
 \section{Genomförande}
