typo, new path for latex on ver.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@246 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/latex/latex.tex
+++ b/assignments/latex/latex.tex
@@ -79,7 +79,7 @@ Leta fram kurslitteraturen i Kungliga Bibliotekets katalog Libris\footnote{%
 Installera universitetets dokumentklasser.
 Detta gör du genom att gå in på följande URL:
 \begin{center}
-	\url{http://ver.miun.se/latexmallar/}.
+	\url{http://ver.miun.se/latex/}.
 \end{center}
 Läs igenom filen \emph{README} och installera därefter paketen 
 \emph{miunmisc.tar.gz}, \emph{miunart.tar.gz} och \emph{miunthes.tar.gz}.
@@ -103,5 +103,5 @@ Ladda upp kompilerad PDF-fil med tillhörande källkod för vardera av de två
 exempeldokumenten till inlämningslådan i lärplattformen.
 
 
-\bibliography{../../itgrund}
+\bibliography{../../literature}
 \end{document}
