renamed itgrund.bib -> literature.bib
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@248 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/install/install.tex
+++ b/assignments/install/install.tex
@@ -138,5 +138,5 @@ erfarenhet av det än av Windows.
 Du kan skriva texten direkt i inlämningslådan i lärplattformen.
 
 
-\bibliography{../../itgrund}
+\bibliography{../../literature}
 \end{document}
