--- a/assignments/internet/internet.tex
+++ b/assignments/internet/internet.tex
@@ -410,5 +410,5 @@ Besvara de olika frågorna och uppgifterna direkt i textfältet i inlämningslå
 i lärplattformen.
 
 
-\bibliography{../../itgrund}
+\bibliography{../../literature}
 \end{document}
