--- a/assignments/security/security.tex
+++ b/assignments/security/security.tex
@@ -143,5 +143,5 @@ Diskutera gärna vad som är viktigt att tänkta på ur säkerhetssynpunkt och d
 övriga tankar från laborationen i diskussionsforumet i lärplattformen.
 
 
-\bibliography{../../itgrund}
+\bibliography{../../literature}
 \end{document}
