--- a/assignments/sftp/sftp.tex
+++ b/assignments/sftp/sftp.tex
@@ -83,5 +83,5 @@ upp till servern, den går att komma åt publikt via URL
 \end{center}
 
 
-\bibliography{../../itgrund,rfc}
+\bibliography{../../literature,rfc}
 \end{document}
