--- a/assignments/terminal/terminal.tex
+++ b/assignments/terminal/terminal.tex
@@ -258,5 +258,5 @@ Frågorna i \prettyref{sec:Genomforande} besvaras i textfältet i laborationens
 inlämningslåda i lärplattformen.
 
 
-\bibliography{../../itgrund}
+\bibliography{../../literature}
 \end{document}
