--- a/introduction/literature.tex
+++ b/introduction/literature.tex
@@ -88,5 +88,5 @@ följande områden:
 \input{../assignments/sftp/literature.tex}
 
 
-\bibliography{../itgrund}
+\bibliography{../literature}
 \end{document}
