--- a/lectures/internet/internet.tex
+++ b/lectures/internet/internet.tex
@@ -286,7 +286,7 @@
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]{Referenser}
-	\bibliography{../itgrund}
+	\bibliography{../literature}
 \end{frame}
 
 
