--- a/lectures/security/security.tex
+++ b/lectures/security/security.tex
@@ -282,7 +282,7 @@
 %%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[allowframebreaks]{Referenser}
-	\bibliography{../itgrund}
+	\bibliography{../literature}
 \end{frame}
 
 \end{document}
