--- a/literature.bib
+++ b/literature.bib
@@ -1,5 +1,4 @@
-@misc{
-	Ekeroot2007dfal,
+@misc{Ekeroot2007dfal,
 	author={Ekeroot, Per},
 	title={Databas f{\"o}r anst{\"a}llda : {Databas i OpenOffice Base}},
 	year={2007},
@@ -7,8 +6,7 @@
 	address={{\"O}stersund},
 	note={Bifogad i WebCT},
 }
-@misc{
-	Ekeroot2007dfam,
+@misc{Ekeroot2007dfam,
 	author={Ekeroot, Per},
 	title={Databas f{\"o}r anst{\"a}llda : {Databas i Microsoft Access}},
 	year={2007},
@@ -16,8 +14,7 @@
 	address={{\"O}stersund},
 	note={Bifogad i WebCT},
 }
-@book{
-	Brookshear2009csa,
+@book{Brookshear2009csa,
 	author={Brookshear, J. Glenn}, 
 	title={Computer science : an overview}, 
 	publisher={Pearson Addison-Wesley}, 
@@ -27,8 +24,7 @@
 	ISBN={978-0-321-54428-5 (pbk.) (International ed.)}, 
 	keywords={Datavetenskap}, 
 }
-@book{
-	Capron1996ctf,
+@book{Capron1996ctf,
 	author={Capron, H. L. and Johnson, J. A.}, 
 	title={Computers : tools for an information age}, 
 	publisher={Pearson Education}, 
@@ -37,8 +33,7 @@
 	edition={8. ed.}, 
 	ISBN={0-13-122723-8}, 
 }
-@misc{
-	OWASP2010ot,
+@misc{OWASP2010ot,
 	author={{The Open Web Application Security Project}},
 	title={{OWASP Top 10 -- 2010} : The Ten Most Critical Web Application
 		Security Risks},
@@ -46,23 +41,20 @@
 	month={apr},
 	URL={https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project},
 }
-@article{
-	Singel2011feh,
+@article{Singel2011feh,
 	author={Singel, Ryan},
 	title={Facebook Enables {HTTPS} So You Can Share Without Being Hijacked},
 	year={2011},
 	journal={Wired},
 	URL={http://www.wired.com/threatlevel/2011/01/facebook-https/},
 }
-@misc{
-	PTStgr,
+@misc{PTStgr,
 	author={{Post- och Telestyrelsen}},
 	title={Tolv goda r{\aa}d},
 	note={Internets{\"a}kerhet f{\"o}r hemmet},
 	URL={http://www.pts.se/sv/Internet/Internetsakerhet/For-hemmet/Tretton-goda-rad/},
 }
-@misc{
-	Kamkar2010him,
+@misc{Kamkar2010him,
 	author={Kamkar, Samy},
 	title={How {I} Met Your Girlfriend},
 	year={2010},
@@ -71,16 +63,14 @@
 		del 2 -- \url{http://www.youtube.com/watch?v=2ctRfWnisSk},
 		del 3 -- \url{http://www.youtube.com/watch?v=vJtmZZGcR54}.},
 }
-@misc{
-	Hunt2011abs,
+@misc{Hunt2011abs,
 	author={Hunt, Troy},
 	title={A brief {Sony} password analysis},
 	year={2011},
 	month={jun},
 	URL={http://www.troyhunt.com/2011/06/brief-sony-password-analysis.html},
 }
-@manual{
-	RFC5735,
+@manual{RFC5735,
 	title={Special Use {IPv4} Addresses},
 	author={Cotton, M. and Vegoda, L.},
 	organization={{ICANN}},
@@ -89,8 +79,7 @@
 	year={2010},
 	URL={https://tools.ietf.org/html/rfc5735},
 }
-@manual{
-	RFC791,
+@manual{RFC791,
 	title={Internet Protocol: {DARPA} Internet Program Protocol Specification},
 	author={{Information Sciences Institute}},
 	organization={University of Southern California},
@@ -99,8 +88,7 @@
 	year={1981},
 	URL={https://tools.ietf.org/html/rfc791},
 }
-@manual{
-	RFC2460,
+@manual{RFC2460,
 	title={Internet Protocol, Version 6 ({IPv6}) Specification},
 	author={Deering, S. and Hinden, R.},
 	organization={Cisco and Nokia},
@@ -109,89 +97,77 @@
 	year={1998},
 	URL={https://tools.ietf.org/html/rfc2460},
 }
-@misc{
-	Convergence,
+@misc{Convergence,
 	title={Convergence},
 	month={oct},
 	year={2011},
 	URL={http://convergence.io},
 }
-@misc{
-	UbuntuInstall,
+@misc{UbuntuInstall,
 	author={Ubuntu Community},
 	title={{GraphicalInstall}},
 	year={2012},
 	URL={https://help.ubuntu.com/community/GraphicalInstall},
 }
-@misc{
-	UbuntuDesktop,
+@misc{UbuntuDesktop,
 	author={Ubuntu Documentation Team},
 	title={Ubuntu Desktop Guide},
 	year={2012},
 	URL={https://help.ubuntu.com/12.04/ubuntu-help/index.html},
 }
-@misc{
-	Bosk2012lui,
+@misc{Bosk2012lui,
 	author={Bosk, Daniel and Franked, Lennart},
 	title={{\LaTeX} Usage Instructions},
 	year={2012},
 	URL={http://ver.miun.se/dokument/instruktioner/latex/windows.pdf},
 }
-@misc{
-	TUG2011jwi,
+@misc{TUG2011jwi,
 	author={{\TeX\ Users Group}},
 	title={Just what is {\TeX}?},
 	year={2011},
 	URL={http://www.tug.org/whatis.html},
 }
-@misc{
-	MiUn2012rft,
+@misc{MiUn2012rft,
 	author={Mittuniversitetet},
 	title={Raportmall för tekniska rapporter},
 	year={2012},
 	note={Finns tillgänglig i lärplattformen}
 }
-@misc{
-	Wikibooks2012l,
+@misc{Wikibooks2012l,
 	author={Wikibooks},
 	title={{\LaTeX}},
 	year={2012},
 	URL={https://en.wikibooks.org/wiki/LaTeX/},
 }
-@misc{
-	Honan2012haa,
+@misc{Honan2012haa,
 	author={Honan, Mat},
 	title={How {Apple} and {Amazon} Security Flaws Led to My Epic Hacking},
 	year={2012},
 	month={aug},
 	URL={http://www.wired.com/threatlevel/2012/08/mat-hacked/},
 }
-@misc{
-	Zetter2012hnt,
+@misc{Zetter2012hnt,
 	author={Zetter, Kim},
 	title={How Not to Become {Mat Honan}: A Short Primer on Online Security},
 	year={2012},
 	month={aug},
 	URL={http://www.wired.com/threatlevel/2012/08/how-not-to-become-mat-honan/},
 }
-@misc{
-	Brading2012tlw,
+@misc{Brading2012tlw,
 	author={Brading, Anna},
 	title={Twitter + location = WeKnowYourHouse},
 	year={2012},
 	month={aug},
 	URL={http://nakedsecurity.sophos.com/2012/08/15/twitter-location-weknowyourhouse/},
 }
-@misc{
-	Cherry2012fky,
+@misc{Cherry2012fky,
 	author={Cherry, Steven},
 	title={Facebook Knows Your Friends -- Even if They're Not on {Facebook}},
 	year={2012},
 	month={may},
 	URL={http://spectrum.ieee.org/podcast/computing/networks/facebook-knows-your-friendseven-if-theyre-not-on-facebook/},
 }
-@misc{
-	Cluley2012twp,
+@misc{Cluley2012twp,
 	author={Cluley, Graham},
 	title={The worst passwords you could ever choose exposed by {Yahoo Voices}
 		hack},
@@ -199,14 +175,20 @@
 	month={jul},
 	URL={http://nakedsecurity.sophos.com/2012/07/13/yahoo-voices-poor-passwords/},
 }
-@book{
-	Brookshear2012csa,
-	author={Brookshear, J.Glenn.},
+@book{Brookshear2012csa,
+	author={Brookshear, J. Glenn},
 	title={Computer science : an overview},
 	publisher={Pearson Addison-Wesley},
 	address={Boston},
 	year={2012},
-	edition={International ed. of 11th revised ed.},
+	edition={11th international},
 	ISBN={978-0-273-75139-7},
 	keywords={Datavetenskap},
+}
+@misc{Oberheide2010bao,
+	author={Oberheide, Jon},
+	title={Brief analysis of the Gawker password dump},
+	year={2010},
+	month={dec},
+	URL={https://blog.duosecurity.com/2010/12/brief-analysis-of-the-gawker-password-dump/}
 }
