clarification regarding document structure and \maketitle
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@266 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/latex/latex.tex
+++ b/assignments/latex/latex.tex
@@ -92,8 +92,10 @@ Detta exempeldokument ska
 	\item ha minst en referens med hjälp av .bib-filen som skapades tidigare,
 	\item ha minst en matematisk formel,
 	\item ha minst två huvudrubriker med minst en underrubrik vardera, samt
-	\item ha en innehållsförteckning.
+	\item ha en innehållsförteckning och en dokumenttitel (\texttt{\textbackslash 
+		maketitle}).
 \end{itemize}
+Dokumentet ska naturligtvis ha en korrekt dokumentstruktur.
 
 
 \section{Examination}
