removed optn 11pt, clarified which two documents should be handed in.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@304 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/latex/latex.tex
+++ b/assignments/latex/latex.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{miunasgn}
+\documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
@@ -102,7 +102,8 @@ Dokumentet ska naturligtvis ha en korrekt dokumentstruktur.
 \label{sec:Examination}
 \noindent
 Ladda upp kompilerad PDF-fil med tillhörande källkod för vardera av de två 
-exempeldokumenten till inlämningslådan i lärplattformen.
+exempeldokumenten, med \emph{article} respektive \emph{miunthes} som 
+dokumentklass, till inlämningslådan i lärplattformen.
 
 
 \bibliography{../../literature}
