removed optn 11pt, clarification regarding vim being simply an example.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@305 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/install/install.tex
+++ b/assignments/install/install.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{miunasgn}
+\documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
@@ -92,10 +92,10 @@ Det sätt som rekommenderas enligt \citet{UbuntuDesktop} för nya användare av
 Ubuntu är att använda Ubuntu Software Centre.
 Det alternativa sättet är att använda pakethanteraren direkt från terminalen.
 Detta görs genom att först starta ett terminalfönster, det vill säga starta 
-programmet \emph{Terminal}, därefter skrivs \emph{sudo apt-get install vim} med 
-följande som resultat:
+programmet \emph{Terminal}, därefter skrivs \emph{sudo apt-get install vim}, 
+för att installera paketet \emph{vim}, med följande som resultat:
 \begin{lstlisting}
-danbos@ID20809793:assgn-install:(0)$ sudo apt-get install vim
+danbos@ID20809793:install:(0)$ sudo apt-get install vim
 [sudo] password for danbos: 
 Reading package lists... Done
 Building dependency tree       
