--- a/assignments/internet/internet.tex
+++ b/assignments/internet/internet.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{miunasgn}
+\documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
