removed optn 11pt, clarification that no answer is required.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@307 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/assignments/terminal/terminal.tex
+++ b/assignments/terminal/terminal.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{miunasgn}
+\documentclass[a4paper]{miunasgn}
 \usepackage[utf8]{inputenc}
 \usepackage[english,swedish]{babel}
 \usepackage{url,hyperref}
@@ -193,7 +193,9 @@ $ find / -type d -print | less
 			arbetskatalogen.
 		\end{solution}
 
-		\part\label{qp:exploring} Använd cd och ls(1) för att utforska filsystemet.
+		\part\label{qp:exploring} Gör detta för din egen skull, denna deluppgift 
+		fordrar inget svar.
+		Använd cd och ls(1) för att utforska filsystemet.
 		Använd den grafiska filhanteraren för att göra samma utforskning parallelt, 
 		på så vis tappar du inte lika lätt orienteringen om du är ovan.
 	\end{parts}
