--- a/introduction/literature.tex
+++ b/introduction/literature.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt,logo]{miunart}
+\documentclass[a4paper,logo]{miunart}
 \usepackage[utf8]{inputenc}
 \usepackage{natbib}
 \usepackage{prettyref,varioref}
@@ -51,6 +51,9 @@ följande områden:
 	\item avsnitten 6.1 till och med 6.4: programspråk och programmering,
 	\item avsnitten 9.1 och 9.2: grunder för databaser och relationsdatabaser.
 \end{itemize}
+
+För referens om talsystem och logik kan ni läsa kapitel 2 och 
+6 i \emph{Matematik 1c} \citep{Bosk2011m1c}.
 
 
 \subsection*{Laboration 0: Installationer}
