removed optn 11pt
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@309 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/introduction/studyguide.tex
+++ b/introduction/studyguide.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt,logo]{miunart}
+\documentclass[a4paper,logo]{miunart}
 \usepackage[utf8]{inputenc}
 \usepackage{natbib}
 \bibliographystyle{sweplnat}
