--- a/introduction/welcome.tex
+++ b/introduction/welcome.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{miunlett}
+\documentclass[a4paper]{miunlett}
 \usepackage[utf8]{inputenc}
 \usepackage[swedish]{babel}
 \usepackage{pdfpages}
