corrected some typos.  added refs for number systems and shell lecture.
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@310 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -104,13 +104,13 @@
 	URL={http://convergence.io},
 }
 @misc{UbuntuInstall,
-	author={Ubuntu Community},
+	author={{Ubuntu Community}},
 	title={{GraphicalInstall}},
 	year={2012},
 	URL={https://help.ubuntu.com/community/GraphicalInstall},
 }
 @misc{UbuntuDesktop,
-	author={Ubuntu Documentation Team},
+	author={{Ubuntu Documentation Team}},
 	title={Ubuntu Desktop Guide},
 	year={2012},
 	URL={https://help.ubuntu.com/12.04/ubuntu-help/index.html},
@@ -191,4 +191,37 @@
 	year={2010},
 	month={dec},
 	URL={https://blog.duosecurity.com/2010/12/brief-analysis-of-the-gawker-password-dump/}
+}
+@incollection{Bosk2011m1c,
+	author={Bosk, Daniel},
+	title={Matematik 1c},
+	booktitle={En formalisering av matematiken i svensk gymnasieundervisning},
+	publisher={Kungl. Tekniska Högskolan},
+	address={Stockholm},
+	year={2011},
+	URL={http://www.bosk.se/masters-thesis/kompendium.pdf},
+	chapter={Bilaga B}
+}
+@manual{bsdman,
+	organisation={OpenBSD},
+	title={OpenBSD Reference Manual},
+	note={OpenBSD 5.0},
+	URL={http://www.openbsd.org/cgi-bin/man.cgi?manpath=OpenBSD+5.0&arch=i386&format=html},
+}
+@manual{linuxman,
+	organisation={Linux},
+	title={Linux Programmer's Manual},
+	URL={http://unixhelp.ed.ac.uk/CGI/man-cgi},
+}
+@misc{Bosk2010libris,
+	author={Bosk, Daniel},
+	title={libris: a script for fetching reference information},
+	year={2010},
+	URL={https://apachepersonal.miun.se/~danbos/pub/libris},
+}
+@misc{Bosk2012rm,
+	author={Bosk, Daniel},
+	title={rm: a script to delay removal of files},
+	year={2012},
+	URL={https://apachepersonal.miun.se/~danbos/pub/rm},
 }
